Fix refresh page content jump bug

--- a/views/assets/stylesheets/scss/app/_layout.scss
+++ b/views/assets/stylesheets/scss/app/_layout.scss
@@ -3,9 +3,7 @@
 
   .mdl-layout__content{
     overflow: auto;
-    &.has-header{
-      padding-top: 48px;
-    }
+    padding-top: 48px;
     &::-webkit-scrollbar {
       width: 8px;
       height: 8px;
